# chhRobotics_CPP

./: CMakeLists.txt  main.cpp  readme20250426.md  readme_master.md
PathPlanning/A_Star/: Astar.h  Astar_main  CMakeLists.txt  README.md  astar_run.sh  main.cpp
PathTracking/: CMakeLists.txt
PathTracking/LQR/: LQRControl.h
PathTracking/utils/: KinematicModel.h  LateralErrorModel.h  MyReferencePath.h
